fix prometheus, optimize kafka consumer and connect NEF data